Implement MVC framework for the folder tree structure

--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
-    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.14",
     "morgan": "~1.9.1",
